<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.OTP">
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/verify_otp_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sent_otp_text"
        android:gravity="center"
        android:textColor="@color/asmani_color"
        android:textStyle="bold"
        android:textSize="13sp"/>
    <LinearLayout
        android:id="@+id/otp_layput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:background="@drawable/no_bg"
                android:layout_centerHorizontal="true"
                android:maxLength="6"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_layput"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_bg_btn_curve"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="15sp"
        android:text="@string/Verify_btn_text"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_marginRight="-100dp"
        android:layout_marginBottom="-70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:src="@drawable/otp_img_1" />
</RelativeLayout>