<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".auth.Login"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="#F0F2F6"
        android:cropToPadding="true"
        android:padding="5dp"
        android:paddingVertical="5dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        android:tint="#596C84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,UnusedAttribute,UseAppTint" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="59dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="149dp"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="43sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bold_roboto"
        android:text="@string/login_in_to_continue"
        android:textColor="#596C84"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="279dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:visibility="visible">


            <RadioButton
                android:id="@+id/supportTeamPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/font_medium"
                android:text="Support Team"
                android:textDirection="locale" />

            <RadioButton
                android:id="@+id/dataEntryPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:checked="true"
                android:layout_marginLeft="60sp"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/font_medium"
                android:gravity="center"
                android:text="Data Entry" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_round"
            android:backgroundTint="#F0F2F6"
            tools:ignore="UnusedAttribute">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:fontFamily="@font/bold_roboto"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="#8B8D93"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round"
            android:backgroundTint="#F0F2F6"
            tools:ignore="UnusedAttribute">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
                android:drawableTint="@color/colorPrimary"
                android:fontFamily="@font/bold_roboto"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="#8B8D93"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_round"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/bold_roboto"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.175"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="#fff"
        app:indicatorSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:trackCornerRadius="5dp" />


    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/black"
        android:text="@string/forgot_pass"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>